pythons/new_neurons/logs/log_8sets/log_best21_v25_8sets_3W_21.txt
  File "../pythons/new_neurons/run_8sets/best21_v25_8sets.py", line 251
    else:
        ^
IndentationError: unindent does not match any outer indentation level
